# emporous-pip

./: .gitignore  README.md  pyproject.toml  render-pb-client.sh
demo/: Dockerfile  build-demo.sh  build-environment.sh  mount-fuse.sh  run-demo.sh  run-registry.sh  try-me.txt
emporous_pip/: emporous_pip_index.py
protos/: manager.proto
workdata/bare/: get-packages.sh
workdata/bare/pypi.org/: build-collection.sh  dataset-config.yaml  generate-dataset-config.py  push-collection.sh
workdata/bare/pypi.org/simple/bottle/: bottle-0.12.10-py2-none-any.whl  bottle-0.12.14-py2-none-any.whl  bottle-0.12.17-py3-none-any.whl  bottle-0.12.20-py3-none-any.whl  bottle-0.12.22-py3-none-any.whl
workdata/bare/pypi.org/simple/pymetronome/: pymetronome-0.1.0-py3-none-any.whl  pymetronome-0.1.1-py3-none-any.whl
workdata/bare/pypi.org/simple/vimetronome/: vimetronome-0.1.0-py3-none-any.whl  vimetronome-0.1.1-py3-none-any.whl
workdata/pip-index/: build-collection.sh  dataset-config.yaml  dataset-config_simple.yaml  generate-dataset-config.py  push-collection.sh
workdata/pip-index/simple/bottle/: bottle-0.11.6-py2.py3-none-any.whl  bottle-0.12.11-py2.py3-none-any.whl  bottle-0.12.15-py2-none-any.whl
workdata/pip-index/simple/vimetronome/: vimetronome-0.1.0-py3-none-any.whl
